# tool_and_judge2

./: .gitignore  Cargo.toml  codebase_rs.pyi  collect_perplexity_local.py  csv_prompt.txt  generate_full_csv.py  generate_partial_csv.py  judge.py  judge.slurm  judge2.slurm  judge3.slurm  judge4.slurm  judge_config1.py  judge_config_slurm3.py  judge_config_slurm4.py  judge_note.txt  output-old.txt  output-revised.txt  output-revised2.txt  plot_preference_vs_perplexity.py  plot_winrate_vs_pptdiff.ipynb  qwen3_interface.py  test_cmp.py  test_cmp_detailed.py  test_equality.py  test_judge_scenario.py  test_stacked_bar_modules.py  tool.py  tool1.slurm  tool2.slurm  tool4.slurm  tool_category_cache.jsonl  tool_config1.py  tool_config2.py  tool_config4.py  tool_config4_gpt5mini.py  tool_config4_gpt5nano.py  tool_config_granite_tiny.py  tool_config_llama70b.py  tool_config_llama8b.py  (+78 more)
judge/datasets/: preference_indices.json  valid_perplexity_indices.json
src/: category_cache.rs  config.rs  lib.rs  one_entry_map.rs  single_or_list.rs  tool_bfcl_decl.rs  tool_bfcl_formats.rs  tool_categorize.rs  tool_category_cache.rs  tool_error_analysis.rs  tool_evaluate.rs  tool_file_models.rs  tool_run.rs  tool_run_impl.rs  tool_translate_function_call.rs  util.rs  utils.rs
src/judge/: concatenate_datasets.rs  dispatch_results.rs  generate_dataset.rs  mod.rs  result_file_model.rs
src/tool/: mod.rs  (+8 more)
src_py/: api_backend.py  deepseek_backend.py  gpt5_backend.py  huggingface_backend.py  llama3_1_backend.py  qwen3_backend.py  utils.py  vllm_backend.py
tests/: test_tool_format_comparison.rs
(+1839 files in other folders)
