[package]
name = "codebase_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
fslock = "0.2.1"
lazy_static = "1.5.0"
pyo3 = {version="0.27.2", features=["auto-initialize"]}
pyo3-async-runtimes = {version="0.27.0", features=["tokio-runtime"]}
regex = "1.12.2"
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = {version="1.48.0", features=["full"]}
