[package]
name = "codebase_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
fslock = "0.2.1"
lazy_static = "1.5.0"
pyo3 = {version="0.27.2", features=["auto-initialize", "experimental-async"]}
pyo3-async-runtimes = {version="0.27.0", features=["tokio-runtime"]}
regex = "1.12.2"
serde = {version="1.0.228", features=["derive"]}
serde_json = {version = "1.0.145", features = ["preserve_order", "arbitrary_precision"]}
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = {version="1.48.0", features=["full"]}
ctrlc = "3.4"
futures = "0.3"
atomic_refcell = "0.1.13"
indexmap = {version="2.12.1", features=["serde"]}
serde_with = "3.16.1"
